# armenia-global-game-jam

./: .env.example  .gitignore  BUILD.md  README.md  build.sh  launcher.py  pyproject.toml  pytrek-9000.sh  pytrek_cli.py  run.sh
.github/workflows/: build.yml
